# jogo_combate_dengue_memoria

./: .gitignore  README.md  index.html  jogo.html  pyproject.toml  requirements.txt
config/: settings.py  urls.py
css/: menu.css  readme  style.css
js/: menu.js  script.js
ranking/: models.py  serializers.py  urls.py  views.py
ranking/migrations/: 0001_initial.py
