[project]
name = "jogo-combate-a-dengue-memoria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.11.1",
    "django-cors-headers==4.9.0",
    "django==6.0.7",
    "djangorestframework==3.17.1",
    "gunicorn==26.0.0",
    "packaging==26.2",
    "psycopg==3.3.4",
    "psycopg-binary==3.3.4",
    "sqlparse==0.5.5",
    "tzdata==2026.3",
    "waitress==3.0.2",
    "granian>=2.7.9",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
]
